Fix blue text on Safari

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -17,6 +17,6 @@ body {
 }
 
 a {
-  color: inherit;
+  color: black;
   text-decoration: none;
 }
